--- a/lib/Devel/gdbg.ui
+++ b/lib/Devel/gdbg.ui
@@ -109,6 +109,15 @@
                         <signal name="activate" handler="onSubs" swapped="no"/>
                       </object>
                     </child>
+                    <child>
+                      <object class="GtkMenuItem" id="showFilesMenu">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="label" translatable="yes">Show Files</property>
+                        <property name="use-underline">True</property>
+                        <signal name="activate" handler="onFiles" swapped="no"/>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
