--- a/lib/Devel/gdbg.ui
+++ b/lib/Devel/gdbg.ui
@@ -323,6 +323,7 @@ stepping over any function calls.</property>
                         <property name="can-focus">True</property>
                         <property name="left-margin">2</property>
                         <property name="right-margin">2</property>
+                        <signal name="button-press-event" handler="onInfoPaneClick" swapped="no"/>
                       </object>
                     </child>
                   </object>
