--- a/lib/Devel/gdbg.ui
+++ b/lib/Devel/gdbg.ui
@@ -3,6 +3,13 @@
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <requires lib="gtksourceview" version="4.0"/>
+  <object class="GtkTreeStore" id="LexicalTreeStore">
+      <columns>
+        <column type="gchararray"/>
+        <column type="gchararray"/>
+        <column type="gchararray"/>
+    </columns>
+  </object>  
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
@@ -579,10 +586,6 @@ Dumper($varname).</property>
                   </packing>
                 </child>
               </object>
-              <packing>
-                <property name="resize">True</property>
-                <property name="shrink">True</property>
-              </packing>
             </child>
             <child>
               <object class="GtkBox">
@@ -590,30 +593,65 @@ Dumper($varname).</property>
                 <property name="can-focus">False</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkScrolledWindow">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="shadow-type">in</property>
-                    <child>
-                      <object class="GtkSourceView" id="sourceView">
-                        <property name="visible">True</property>
-                        <property name="can-focus">True</property>
-                        <property name="left-margin">2</property>
-                        <property name="right-margin">2</property>
-                        <property name="monospace">True</property>
-                        <property name="show-line-numbers">True</property>
-                        <property name="show-line-marks">True</property>
-                        <property name="highlight-current-line">True</property>
-                        <signal name="button-press-event" handler="onClick" swapped="no"/>
-                        <signal name="line-mark-activated" handler="onMarker" swapped="no"/>
-                      </object>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="expand">True</property>
-                    <property name="fill">True</property>
-                    <property name="position">0</property>
-                  </packing>
+					<object class="GtkPaned" id="sourcePanel">
+						<property name="visible">True</property>
+						<property name="can-focus">True</property>
+						<property name="position">450</property>
+						<property name="position-set">True</property>
+						<property name="wide-handle">True</property>
+						<child>
+								<object class="GtkScrolledWindow">
+									<property name="visible">True</property>
+									<property name="can-focus">True</property>
+									<property name="shadow-type">in</property>
+									<child>
+									<object class="GtkSourceView" id="sourceView">
+										<property name="visible">True</property>
+										<property name="can-focus">True</property>
+										<property name="left-margin">2</property>
+										<property name="right-margin">2</property>
+										<property name="monospace">True</property>
+										<property name="show-line-numbers">True</property>
+										<property name="show-line-marks">True</property>
+										<property name="highlight-current-line">True</property>
+										<signal name="button-press-event" handler="onClick" swapped="no"/>
+										<signal name="line-mark-activated" handler="onMarker" swapped="no"/>
+									</object>
+									</child>
+								</object>
+								<packing>
+									<property name="expand">True</property>
+									<property name="fill">True</property>
+									<property name="position">0</property>
+								</packing>
+						</child>		
+						<child>
+								<object class="GtkScrolledWindow">
+									<property name="visible">True</property>
+									<property name="can-focus">True</property>
+									<property name="shadow-type">in</property>
+									<child>
+										<object class="GtkTreeView" id="lexicalTreeView">
+											<property name="visible">True</property>
+											<property name="can-focus">True</property>
+										</object>
+										<packing>
+											<property name="expand">True</property>
+											<property name="fill">True</property>
+											<property name="position">0</property>
+										</packing>
+									</child>
+								</object>
+								<packing>
+									<property name="expand">True</property>
+									<property name="fill">True</property>
+									<property name="position">1</property>
+								</packing>
+						</child>		
+					</object>	
+					<packing>
+	                    <property name="expand">True</property>
+					</packing>
                 </child>
                 <child>
                   <object class="GtkLabel" id="statusBar">
@@ -629,10 +667,6 @@ Dumper($varname).</property>
                   </packing>
                 </child>
               </object>
-              <packing>
-                <property name="resize">True</property>
-                <property name="shrink">True</property>
-              </packing>
             </child>
           </object>
           <packing>
