--- a/lib/Devel/gdbg.ui
+++ b/lib/Devel/gdbg.ui
@@ -239,6 +239,15 @@
                       </object>
                     </child>
                     <child>
+                      <object class="GtkMenuItem" id="reloadMenu">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="label" translatable="yes">Reload File</property>
+                        <property name="use-underline">True</property>
+                        <signal name="activate" handler="onReload" swapped="no"/>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkMenuItem" id="scrollMenu">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
