--- a/lib/Devel/gdbg.ui
+++ b/lib/Devel/gdbg.ui
@@ -3,6 +3,7 @@
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <requires lib="gtksourceview" version="4.0"/>
+
   <object class="GtkTreeStore" id="LexicalTreeStore">
       <columns>
         <column type="gchararray"/>
@@ -10,7 +11,7 @@
         <column type="gchararray"/>
     </columns>
   </object>  
-  <object class="GtkImage" id="image1">
+  <object class="GtkImage" id="imageFile">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
     <property name="stock">gtk-file</property>
@@ -60,6 +61,7 @@
     <property name="can-focus">False</property>
     <property name="icon-name">system-search</property>
   </object>
+						  
 <object class="GtkDialog" id="searchDialog">  
     <property name="title">Search Settings</property>
     <property name="can-focus">False</property>
@@ -237,7 +239,7 @@
 								<property name="label">Open Source File</property>
 								<property name="visible">True</property>
 								<property name="can-focus">False</property>
-								<property name="image">image1</property>
+								<property name="image">imageFile</property>
 								<property name="use-stock">False</property>
 								<property name="always-show-image">True</property>
 								<signal name="activate" handler="onOpen" swapped="no"/>
@@ -356,7 +358,7 @@
 				<packing>
 					<property name="expand">True</property>
 					<property name="fill">True</property>
-					<property name="position">0</property>
+					<property name="position">1</property>
 				</packing>
 			</child>
 			<child>
@@ -366,7 +368,7 @@
 				<packing>
 					<property name="expand">False</property>
 					<property name="fill">False</property>
-					<property name="position">1</property>
+					<property name="position">2</property>
 				</packing>
 			</child>
 		</object>
